--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,18 @@
 html { 
     font-family: "Open Sans", sans-serif; 
+    padding-left: 2rem;
+    padding-top: 2rem;
+    padding-right: 2rem;
+    padding-bottom: 2rem;
+    background-color: #FFFFFF;
 }
 h1 {
     font-size: 4rem;
+    text-align: center;
 }
 p {
     font-size: 3rem;
+    letter-spacing: 1rem;
 }
 li { 
     font-size: 2rem;
