--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,11 @@ html {
     padding-bottom: 2rem;
     background-color: #FFFFFF;
 }
+body {
+    width: 40rem;
+    margin: 0 auto;
+    background-color: #FFFFFF;
+}
 h1 {
     font-size: 4rem;
     text-align: center;
