--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,16 @@
 html { 
     font-family: "Open Sans", sans-serif; 
-    padding-left: 2rem;
-    padding-top: 2rem;
-    padding-right: 2rem;
-    padding-bottom: 2rem;
-    background-color: #FFFFFF;
+    color: #FFFFFF;
+    padding-left: 1rem;
+    padding-top: 1rem;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
+    background-color: #000000;
 }
 body {
-    width: 40rem;
-    margin: 0 auto;
-    background-color: #FFFFFF;
+    width: 80rem;
+    margin: auto;
+    background-color: #000000;
 }
 h1 {
     font-size: 4rem;
@@ -22,4 +23,10 @@ p {
 li { 
     font-size: 2rem;
     list-style-type: none;
+}
+a:link {
+    color:#FFFFFF
+}
+a:hover {
+    color: #D9D9D9
 }
