--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@ body {
     margin: auto;
     background-color: #000000;
 }
+.material-icons.md-36 { font-size: 36px; }
 h1 {
     font-size: 4rem;
     text-align: center;
