--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 html { 
-    font-family: "Open Sans", sans-serif; 
+    font-family: 'Roboto', sans-serif; 
     color: #FFFFFF;
     padding-left: 1rem;
     padding-top: 1rem;
