--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,12 @@ html {
     padding-bottom: 1rem;
     background-color: #000000;
 }
+li {
+    float: left;
+    display: block;
+    padding: 8px;
+    background-color:#FFFFFF
+}
 .material-icons.md-36 { font-size: 36px; }
 p {
     font-size: 1rem;
