--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ li {
     float: left;
     display: block;
     padding: 8px;
-    background-color:#FFFFFF
+    background-color:#FFFFFF;
 }
 .material-icons.md-36 { font-size: 36px; }
 p {
