--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,20 @@
+a {
+
+}
 a:link {
     color:#FFFFFF
+}
+a:visited {
+    text-decoration: none;
+}
+a:focus {
+
 }
 a:hover {
     color: #D9D9D9
 }
-a:visited {
-    text-decoration:none;
+a:active {
+    
 }
 body {
     width: 80rem;
