--- a/styles/style.css
+++ b/styles/style.css
@@ -1,20 +1,14 @@
-a {
-
-}
 a:link {
-    color:#FFFFFF
+    color:#000000;
 }
 a:visited {
-    text-decoration: none;
-}
-a:focus {
-
+    color:#000000;
 }
 a:hover {
-    color: #D9D9D9
+    color: #D9D9D9;
 }
 a:active {
-    
+    background: #D9D9D9;
 }
 body {
     width: 80rem;
