--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,18 @@ a:hover {
 a:active {
     background: #D9D9D9;
 }
+#email a:link {
+    color:#FFFFFF;
+}
+#email a:visited {
+    color:#FFFFFF;
+}
+#email a:hover {
+    color: #D9D9D9;
+}
+#email a:active {
+    background: #D9D9D9;
+}
 body {
     width: 80rem;
     margin: auto;
@@ -33,8 +45,15 @@ li {
     display: block;
     padding: 8px;
     background-color:#FFFFFF;
+    text-decoration:none;
 }
 .material-icons.md-36 { font-size: 36px; }
 p {
     font-size: 1rem;
+}
+section {
+    display:flex;
+}
+article {
+    flex: 1 200px;
 }
