link underline remove

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,18 @@
 a:link {
     color:#000000;
+    text-decoration:none;
 }
 a:visited {
     color:#000000;
+    text-decoration:none;
 }
 a:hover {
     color: #D9D9D9;
+    text-decoration:none;
 }
 a:active {
     background: #D9D9D9;
+    text-decoration:none;
 }
 #email a:link {
     color:#FFFFFF;
@@ -46,6 +50,7 @@ li {
     padding: 8px;
     background-color:#FFFFFF;
     border-right: 1px solid #000000;
+    text-decoration:none;
 }
 li last-child {
     border-right:none;
@@ -53,10 +58,4 @@ li last-child {
 .material-icons.md-36 { font-size: 36px; }
 p {
     font-size: 1rem;
-}
-section {
-    display:flex;
-}
-article {
-    flex: 1 200px;
 }
