--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,13 @@
 a:link {
-    color:#000000;
+    color:#D9D9D9;
     text-decoration:none;
 }
 a:visited {
-    color:#000000;
+    color:#D9D9D9;
     text-decoration:none;
 }
 a:hover {
-    color: #D9D9D9;
+    color: #000000;
     text-decoration:none;
 }
 a:active {
@@ -59,7 +59,12 @@ li last-child {
 p {
     font-size: 1rem;
 }
+#headshot img {
+    height:700px;
+    width:500px;
+}
 img {
     height:600px;
     width:600px;
 }
+
