--- a/styles/style.css
+++ b/styles/style.css
@@ -2,10 +2,11 @@ body{
     font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #E9D8A6;
 }
-.box{
+.about{
     width: 450px;
-    background: rgba(0, 0, 0, 0.8);
+    background: #005F73;
     padding: 40px;
     text-align: center;
     margin: auto; 
@@ -13,15 +14,15 @@ body{
     color: white; 
     font-family: 'Open Sans', sans-serif;
 }
-.box-img{
+.about-img{
     border-radius: 50%;
     width: 200px;
     height: 200px;
 }
-.box h1{
+.about h1{
     font-size: 40px;
     font-weight: 100;
 }
-.box p{
-    text-align: center;
+.about p{
+    text-align: justify;
 }
