--- a/styles/style.css
+++ b/styles/style.css
@@ -2,11 +2,11 @@ body{
     font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #E9D8A6;
+    background-color: #A3B18A;
 }
 .about{
     width: 450px;
-    background: #005F73;
+    background: #354F52;
     padding: 40px;
     text-align: center;
     margin: auto; 
