--- a/styles/style.css
+++ b/styles/style.css
@@ -26,3 +26,11 @@ body{
 .about p{
     text-align: justify;
 }
+.contact{
+    text-align:center;
+    padding-top: 40px;
+}
+.material-icons{
+    color: #354F52;
+    font-size: 48px;
+}
