--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@ body{
     background-color: #A3B18A;
 }
 .about{
+    border-radius: 2%;
     width: 450px;
     background: #354F52;
     padding: 40px;
@@ -32,5 +33,4 @@ body{
 }
 .material-icons{
     color: #354F52;
-    font-size: 48px;
 }
