--- a/styles/style.css
+++ b/styles/style.css
@@ -34,3 +34,12 @@ body{
 .material-icons{
     color: #354F52;
 }
+a:link{
+    text-decoration:none;
+}
+a:visited{
+    text-decoration: none;
+}
+a:hover{
+    color:#D3D3D3;
+}
