--- a/styles/style.css
+++ b/styles/style.css
@@ -34,11 +34,8 @@ body{
 .material-icons{
     color: #354F52;
 }
-a:link{
+a:link, a:visited{
     text-decoration:none;
-}
-a:visited{
-    text-decoration: none;
 }
 a:hover{
     color:#D3D3D3;
