--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,8 @@ a:hover{
 @media (max-width:1000px){
     .about{
     border-radius: 2%;
-    width: 450px;
+    width: 80%;
+    height: 80%;
     background: #354F52;
     padding: 40px;
     text-align: center;
