--- a/styles/style.css
+++ b/styles/style.css
@@ -2,17 +2,17 @@ body{
     font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #ffffff;
+    background-color: #d8d8d8;
 }
 .about{
     border-radius: 2%;
     width: 450px;
-    background: #727272;
+    background: #d8d8d8;
     padding: 40px;
     text-align: center;
     margin: auto; 
     margin-top: 5%;
-    color: white; 
+    color: rgb(0, 0, 0); 
     font-family: 'Open Sans', sans-serif;
 }
 .about-img{
@@ -32,14 +32,14 @@ body{
     padding-top: 40px;
 }
 .material-icons{
-    color: #727272;
+    color: #000000;
     font-size: 40px !important;
 }
 a:link, a:visited{
     text-decoration:none;
 }
 a:hover{
-    color:#D3D3D3;
+    color:#8b8b8b;
     transition: color 250ms;
 }
 @media (max-width:1000px){
